--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
         background-color: #f8f8f8;
         min-width: 1205px;
     }
-    /*清除浮动元素*/
+    /* 清除浮动元素 */
     .clear-fix:after {
         content: "."; 
         display: block;
@@ -11,8 +11,9 @@
         overflow: hidden;
         visibility: hidden;
     }
-    /*顶部提醒栏*/
+    /* 顶部提醒栏 */
     #top-ad {
+        display: none;
         height: 36px;
         background-color: #f3f3f3;
     }
@@ -44,7 +45,7 @@
     #top-ad .close:hover {
         color: #21a557;
     }
-    /*导航栏*/
+    /* 导航栏 */
     #nav {
         height: 95px;
         background-color: #fff;
@@ -58,7 +59,7 @@
         margin-top: 36px;
         margin-left: 1px;
     }
-    /*关注按钮 需修改*/
+    /* 关注按钮 需修改 */
     .nav-focus {
         display: block;
         float: left;
@@ -86,7 +87,7 @@
         font: 12px/21px "宋体";
         color: #666;
     }
-    /*导航栏右边菜单*/
+    /* 导航栏右边菜单 */
     .nav-menu {
         float: right;
     }
@@ -113,22 +114,27 @@
     .nav-search:hover {
         background-position: -19px -85px;
     }
-    /*轮播图*/
+    /* 轮播图 */
     #index-banner {
         position: relative;
-        width: 100%;
         height: 460px;
-        overflow: hidden;
         background-color: #fff;
+        overflow: hidden;
     }
-    #index-banner .item {
+    #index-banner .banner-box {
         position: absolute;
+        width: 1652px;
+        height: 460px;
         left: 50%;
         margin-left: -826px;
+    }
+    #index-banner .item {
         display: none;
     }
     #index-banner .active {
         display: block;
+        /* 用调整margin-left的方式来做动画 */
+        /* margin-left: 100%; */
     }
     #index-banner .pointer {
         position: absolute;
@@ -150,7 +156,7 @@
     #index-banner .pointer i + i {
         margin-left: 11px;
     }
-    /*主页网站推广*/
+    /* 主页网站推广 */
     .index-promotion {
         background-color: #fff;
         height: 295px;
@@ -200,12 +206,11 @@
     .promotion-item .logo3 {
         background: url(../img/icon.png) -170px 0 no-repeat;
     }
-    /*多列图*/
+    /* 多列图 */
     .m-column {
         position: relative;
         height: 220px;
         overflow: hidden;
-        background-color: #fff;
     }
     .m-column .container {
         position: absolute;
@@ -226,7 +231,86 @@
         bottom: 0;
         width: 100%;
     }
-    /*页脚*/
+    /* 主内容区域 */
+    #main {
+        width: 1205px;
+        margin: 80px auto 170px;
+    }
+    /* 左侧 */
+    .main-content {
+        float: left;
+        width: 960px;
+    }    
+    /* class Tab菜单 */
+    .m-classtab {
+        width: 400px;
+        box-shadow: 0 1px 1px 1px #d4d3d3;
+    }
+    .m-classtab li{
+        float: left;
+        width: 200px;
+        height: 50px;
+        font: 20px/51px "Microsoft YaHei";
+        text-align: center;
+    }
+    .m-classtab .design {
+        background-color: #39a030;
+        color: #fff;
+    }
+    .m-classtab .language {
+        background-color: #fff;
+        color: #666;
+    }
+    /* class 课程信息 */
+    .m-classlist {
+        margin-top: 30px;
+    }
+    .m-classlist .col {
+        float: left;
+    }
+    .m-classlist .col + .col{
+        margin-left: 20px;
+    }
+    .m-classlist .item {
+        width: 225px;
+        height: 228px;
+        background-color: #fff;
+    }
+    .m-classlist .item + .item {
+        margin-top: 20px;
+    }
+    /* 右侧边栏 */
+    .main-side {
+        float: right;
+        width: 225px;
+    }
+    /* 2.机构介绍 */
+    .m-organization, .m-rank{
+        font: 14px/1 "Microsoft YaHei";
+        color: #666;
+        border: 1px solid #ecebeb;
+        border-width: 0 1px 1px 1px;
+        background-color: #fff;
+    }
+    .m-organization .title, .m-rank .title{
+        padding: 19px 20px 20px;
+        font: 16px/1 "Microsoft YaHei";
+        color: #333;
+        border-bottom: 1px solid #ddd;
+    }
+    .m-organization .video-box, .m-rank .rank-box{
+        padding: 20px;
+        border-bottom: 1px solid #d4d3d3;
+    }
+    .m-organization .video{
+        margin-top: 9px;
+    }
+    .m-rank {
+        margin-top: 19px;
+    }
+    /*以上的代码可复用可修改HTML的CLASS类*/
+    /* 3.最热排行 */
+    /* 页脚 */
     #footer {
         background-color: #2c3339;
         height: 262px;
@@ -284,7 +368,7 @@
         height: 16px;
         background: url(../img/icon.png) -39px -85px no-repeat;
     }
-    /*媒体检测*/
+    /* 媒体检测 */
     @media screen and (max-width: 1205px) {
         #top-ad .box {
             width: 960px;
