--- a/css/style.css
+++ b/css/style.css
@@ -60,16 +60,18 @@
         margin-left: 1px;
     }
     /* 关注按钮 需修改 */
-    .nav-focus {
-        display: block;
+    .nav-focus, .nav-unfocus {
+        display: none;
         float: left;
         margin-left: 31px;
         margin-top: 36px;
+        border-radius: 2px;
+    }
+    .nav-focus {
         padding: 0 9px;
         font: 12px/21px "宋体";
         color: #fff;
-        background-color: #21a557;
-        border-radius: 2px;
+        background-color: #21a557;        
     }
     .nav-focus > em {
         font-weight: 700;
@@ -80,6 +82,31 @@
         background-color: #2fb556;
         color: #fff;
     }
+    .nav-unfocus {
+        display: none;
+        padding-right: 7px;
+        font: 12px/19px "宋体";
+        color: #333;
+        border: 1px solid #efefef;
+        background-color: #f8f8f8;
+    }
+    .nav-unfocus a, .nav-unfocus span {
+        color: #999;
+    }
+    .nav-unfocus:hover {
+        background-color: #fff;
+    }
+    .nav-unfocus a:hover {
+        color: #21a557;
+        text-decoration: underline;
+    }
+    .nav-unfocus i {
+        display: inline-block;
+        width: 11px;
+        height: 9px;
+        margin: 0 5px 0 6px;
+        background: url(../img/icon.png) -43px -105px no-repeat;
+    }
     .nav-fans {
         float: left;
         margin-left: 14px;
@@ -87,6 +114,7 @@
         font: 12px/21px "宋体";
         color: #666;
     }
+
     /* 导航栏右边菜单 */
     .nav-menu {
         float: right;
@@ -108,11 +136,79 @@
         width: 19px;
         height: 19px;
         margin-top: 37px;
-        background: url(../img/icon.png) 0 -85px no-repeat;
         margin-right: 15px;
+        background: url(../img/icon.png) 0 -85px no-repeat;
+        cursor: pointer;
     }
     .nav-search:hover {
         background-position: -19px -85px;
+    }
+    /* 登录界面 */
+    #login {
+        display: none;
+    }
+    #login .mask {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 998;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    .login-box {
+        position: fixed;
+        width: 387px;
+        height: 288px;
+        top: 50%;
+        margin-left: -194px;
+        margin-top: -144px;
+        left: 50%;
+        z-index: 999;
+        background-color: #fff;
+    }
+    #login .close{
+        display: block;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        top: 10px;
+        right: 8px;
+        background: url(../img/icon.png) -55px -105px no-repeat;
+    }
+    .login-title {
+        padding: 30px 0 20px 39px;
+        font: 700 18px/1 "Microsoft YaHei";
+    }
+    #login-form {
+        padding-left:40px; 
+    }
+    #login-form input {
+        display: block;
+        width: 293px;
+        height: 43px;
+        font: 16px/43px "Microsoft YaHei";
+        text-indent: 10px;
+        color: #ccc;
+        border: 1px solid #dfdfdf;
+        background-color: #fafafa;
+        box-shadow: inset 2px 2px 0 0 #f1f1f1;
+    }
+    #login-form .empty {
+        border: 1px solid #e00;
+    }
+    #password {
+        margin-top: 15px;
+    }
+    #signin {
+        width: 293px;
+        height: 46px;
+        margin-top: 29px;
+        font: 16px/46px "Microsoft YaHei";
+        color: #fff;
+        border-width: 0;
+        background-color: #1aa43a;
+        box-shadow: 2px 2px 0 0 #d5e3da;
     }
     /* 轮播图 */
     #index-banner {
@@ -237,17 +333,17 @@
         margin: 80px auto 170px;
     }
     /* 左侧 */
-    .main-content {
+    #main-content {
         position: relative;
         float: left;
         width: 960px;
-    }    
+    }
     /* lesson Tab菜单 */
     .m-lessontab {
         width: 400px;
         box-shadow: 0 1px 1px 1px #d4d3d3;
     }
-    .m-lessontab li{
+    .m-lessontab li {
         float: left;
         width: 200px;
         height: 50px;
@@ -257,7 +353,7 @@
         color: #666;
         cursor: pointer;
     }
-    .m-lessontab .current, .m-lessontab li:hover{
+    .m-lessontab .current, .m-lessontab li:hover {
         background-color: #39a030;
         color: #fff;
     }
@@ -268,7 +364,7 @@
     .m-lessonlist .col {
         float: left;
     }
-    .m-lessonlist .col + .col{
+    .m-lessonlist .col + .col {
         margin-left: 20px;
     }
     .m-lessonlist .item {
@@ -294,12 +390,12 @@
         margin-top: 10px;
         padding-left: 5px;
     }
-    .m-lessonlist .item-text{
+    .m-lessonlist .item-text {
         margin-top: 10px;
         font: 12px/1 "Microsoft YaHei";
     }
     .m-lessonlist .item-title {
-        width: 220px;
+        width: 210px;
         font: 12px/13px "Microsoft YaHei";
         text-overflow: ellipsis;
         overflow: hidden;
@@ -329,18 +425,21 @@
     }
     /*课程信息浮动框*/
     .m-lessonflow {
-        /*display: none;*/
+        display: none;
         position: absolute;
         z-index: 998;
         top: -10px;
         left: -10px;
         width: 480px;
-        height: 238px;
         background-color: #fff;
         outline: 1px solid #d0cfd0;
         box-shadow: 0 0 8px 1px #d0cfd0;
     }
-    .m-lessonflow img{
+    /*hover显示悬浮，要删除*/
+/*    .m-lessonlist .item:hover .m-lessonflow {
+        display: block;
+    }*/
+    .m-lessonflow img {
         float: left;
         margin: 10px 0 0 10px;
     }
@@ -349,6 +448,7 @@
         margin: 15px 0 0 18px;
     }
     .m-lessonflow .flow-title {
+        width: 220px;
         font: 18px/1 "Microsoft YaHei";
         color: #333;
     }
@@ -367,8 +467,7 @@
     }
     .m-lessonflow .description {
         box-sizing: border-box;
-        height: 83px;
-        padding: 15px 30px 0 21px;
+        padding: 15px 30px 15px 21px;
         margin-top: 20px;
         font: 14px/24px "Microsoft YaHei";
         color: #666;
@@ -409,24 +508,24 @@
         width: 225px;
     }
     /* 2.机构介绍 */
-    .m-organization, .m-rank{
+    .m-organization, .m-rank {
         font: 14px/1 "Microsoft YaHei";
         color: #666;
         border: 1px solid #ecebeb;
         border-width: 0 1px 1px 1px;
         background-color: #fff;
     }
-    .m-organization .title, .m-rank .title{
+    .m-organization .title, .m-rank .title {
         padding: 19px 20px 20px;
         font: 16px/1 "Microsoft YaHei";
         color: #333;
         border-bottom: 1px solid #ddd;
     }
-    .m-organization .video-box, .m-rank .rank-box{
+    .m-organization .video-box, .m-rank .rank-box {
         padding: 20px;
         border-bottom: 1px solid #d4d3d3;
     }
-    .m-organization .video{
+    .m-organization .video {
         margin-top: 9px;
     }
     .m-rank {
