--- a/css/style.css
+++ b/css/style.css
@@ -448,10 +448,10 @@
         outline: 1px solid #d0cfd0;
         box-shadow: 0 0 8px 1px #d0cfd0;
     }
-    /*hover显示悬浮，要删除*/
-/*    .m-lessonlist .item:hover .m-lessonflow {
+    /* 悬浮样式 */
+    .m-lessonlist .m-lessonflow.cur {
         display: block;
-    }*/
+    }
     .m-lessonflow img {
         float: left;
         margin: 10px 0 0 10px;
@@ -541,11 +541,103 @@
     .m-organization .video {
         margin-top: 9px;
     }
+    .m-organization .video-img {
+        display: block;
+        position: relative;
+        margin-top: 10px;
+    }
+    .m-organization .video-img:hover .icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -23px;
+        margin-top: -23px;
+        width: 46px;
+        height: 46px;
+        background: url(../img/icon.png) -240px -118px no-repeat;
+    }
     .m-rank {
         margin-top: 19px;
     }
+    /* 视频播放窗口 */
+    #video-page {
+        display: none;
+    }
+    #video-page .mask {
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 998;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    #video-page .video-content {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        z-index: 999;
+        margin-left: -510px;
+        margin-top: -325px;
+        padding: 30px 30px 40px 30px;
+        background-color: #fff;
+    }
+    #video-page .video-content h2 {
+        margin-bottom: 20px;
+        font: 700 18px/1 "Microsoft YaHei";
+        color: #444;
+    }
+    #video-page .close {
+        display: block;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        top: 13px;
+        right: 12px;
+        background: url(../img/icon.png) -55px -105px no-repeat;
+    }
     /*以上的代码可复用可修改HTML的CLASS类*/
     /* 3.最热排行 */
+    .m-rank .rank-box {
+        height: 700px;
+        padding-top: 0;
+        padding-right: 15px;
+        overflow: hidden;
+    }
+    .m-rank .rank-box ul {
+        position: relative;
+    }
+    .m-rank .item {
+        height: 50px;
+        margin-top: 20px;
+    }
+    .m-rank .item img {
+        float: left;
+        width: 50px;
+        height: 50px;
+    }
+    .m-rank .item-name {
+        float: left;
+        width: 125px;
+        margin-left: 12px;
+        font: 14px/1 "Microsoft YaHei";
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        color: #333;
+        cursor: pointer;
+    }
+    .m-rank .item-name:hover {
+        color: #39a303;
+    }
+    .m-rank .num {
+        float: left;
+        width: 125px;
+        margin: 12px 0 0 12px;
+        text-indent: 16px;
+        font: 11px/12px "Microsoft YaHei";
+        background: url(../img/icon.png) -240px -87px no-repeat;
+    }
     /* 页脚 */
     #footer {
         background-color: #2c3339;
